--- a/src/app/calculate-model/calculate-model.component.html
+++ b/src/app/calculate-model/calculate-model.component.html
@@ -54,41 +54,60 @@
                 <label>Počty a veľkosti počiatočných správ</label>
                 <h2 class="text-center mb-5">
                     Celkový počet správ sub_initial {{p5}} <br>
-                    Celková veľkosť správ sub_initial {{p5a}} <br>
+                    Celková veľkosť správ sub_initial {{cp5a}} <br>
                     Celkový počet odpovedí 200 (OK) na správu sub_initial {{p6}}<br>
-                    Celková veľkosť odpovedí 200 (OK) na správu sub_initial {{p6a}} <br>
+                    Celková veľkosť odpovedí 200 (OK) na správu sub_initial {{cp6a}} <br>
                     Celkový počet správ notify_sub {{p7}} <br>
-                    Celková veľkosť správ notify_sub {{p7a}}<br>
+                    Celková veľkosť správ notify_sub {{cp7a}}<br>
                     Celkový počet odpovedí 200 (OK) na správu notify_sub {{p8}} <br>
-                    Celková veľkosť odpovedí 200 (OK) na správu notify_sub {{p8a}} <br> <br>
+                    Celková veľkosť odpovedí 200 (OK) na správu notify_sub {{cp8a}} <br> <br>
                     Celkové množstvo prenesených správ {{p9}} <br>
-                    Celková veľkosť všetkých počiatočných správ {{p9a}} <br>
+                    Celková veľkosť všetkých počiatočných správ {{cp9a}} <br>
                 </h2>
                 <label>Počty a veľkosti správ v ustálenej prevádzke
                 </label>
                 <h2 class="text-center mb-5">
                     Celkový počet správ notify_pub {{u7}} <br>
-                    Celková veľkosť správ notify_pub {{u7a}} <br>
+                    Celková veľkosť správ notify_pub {{cu7a}} <br>
                     Celkový počet odpovedí 200 (OK) na správu notify_pub {{u8}} <br>
-                    Celková veľkosť odpovedí 200 (OK) na správu notify_pub {{u8a}} <br> <br>
+                    Celková veľkosť odpovedí 200 (OK) na správu notify_pub {{cu8a}} <br> <br>
                     Celkový počet správ pri zmene stavu prítomnosti {{u9}} <br>
-                    Celková veľkosť správ pri zmene stavu prítomnosti {{u9a}} <br>
+                    Celková veľkosť správ pri zmene stavu prítomnosti {{cu9a}} <br>
                     Celkový počet správ sub_refresh {{u10}} <br>
-                    Celková veľkosť správ sub_refresh {{u10a}} <br>
+                    Celková veľkosť správ sub_refresh {{cu10a}} <br>
                     Celkový počet odpovedí 200 (OK) na správu sub_refresh {{u11}} <br>
-                    Celková veľkosť odpovedí 200 (OK) na správu sub_refresh {{u11a}} <br>
+                    Celková veľkosť odpovedí 200 (OK) na správu sub_refresh {{cu11a}} <br>
                     Celkový počet správ notify_sub {{u12}} <br>
-                    Celková veľkosť správ notify_sub {{u12a}} <br>
+                    Celková veľkosť správ notify_sub {{cu12a}} <br>
                     Celkový počet odpovedí 200 (OK) na správu notify_sub {{u13}} <br>
-                    Celková veľkosť odpovedí 200 (OK) na správu notify_sub {{u13a}} <br> <br>
+                    Celková veľkosť odpovedí 200 (OK) na správu notify_sub {{cu13a}} <br> <br>
                     Celkový počet správ spojený s obnovovaním odberu prítomnosti {{u14}} <br>
-                    Celková veľkosť správ pri obnovovaní odberu prítomnosti {{u14a}} <br> <br>
+                    Celková veľkosť správ pri obnovovaní odberu prítomnosti {{cu14a}} <br> <br>
                     Celkové množstvo všetkých prenesených správ v ustálenej prevádzke {{u15}} <br>
-                    Celková veľkosť všetkých správ v ustálenej prevádzke {{u15a}} <br>
+                    Celková veľkosť všetkých správ v ustálenej prevádzke {{cu15a}} <br>
                 </h2>
                 <label>Počty a veľkosti záverečných správ</label>
                 <h2 class="text-center mb-5">
-                    {{p5a}}
+                    Celkový počet správ sub_terminal {{z5}} <br>
+                    Celková veľkosť správ sub_terminal {{cz5a}} <br>
+                    Celkový počet odpovedí 200 (OK) na správu sub_terminal {{z6}} <br>
+                    Celková veľkosť odpovedí 200 (OK) na správu sub_terminal {{cz6a}} <br>
+                    Celkový počet správ notify_sub {{z7}} <br>
+                    Celková veľkosť správ notify_sub {{cz7a}} <br>
+                    Celkový počet odpovedí 200 (OK) na správu notify_sub {{z8}} <br>
+                    Celková veľkosť odpovedí 200 (OK) na správu notify_sub {{cz8a}} <br> <br>
+                    Celkové množstvo prenesených správ {{z9}} <br>
+                    Celková veľkosť všetkých záverečných správ {{cz9a}} <br>
+                </h2>
+                <label>Počty a veľkosti všetkých prenesených správ</label>
+                <h2 class="text-center mb-5">
+                    Celkový počet prenesených správ {{v1}} <br>
+                    Celková veľkosť všetkých správ {{cv1a}} <br>
+                    Celkový počet prenesených správ za jednu sekundu {{v2}} <br>
+                    Celková veľkosť všetkých správ za sekundu  {{cv2a}} <br>
+                    Celkové množstvo prenesených správ jedným užívateľom {{v3}} <br>
+                    Celková veľkosť všetkých správ na užívateľa {{cv3a}} <br>
+                    
                 </h2>
             </div>
         </div>
