--- a/src/app/calculate-model/calculate-model.component.html
+++ b/src/app/calculate-model/calculate-model.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h2 class="text-center mb-5">
-        Analýza komunikácie služby prítomnosti spočíva z komplexných matematických výpočtov. Pre analýzu komunikáciu
+        Analýza komunikácie služby prítomnosti spočíva z komplexných matematických výpočtov. Pre analýzu komunikácie
         vložte vstupné údaje.
     </h2>
     <div class="row">
