--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -57,7 +57,12 @@
         <li [class.active]="isSectionActive(6)" class="nav-item mr-3 cursor-pointer">
           <a (click)="toElement(6)"
             class="nav-link inline-block py-2 px-4 text-white no-underline transition duration-500 ease-in-out hover:bg-yellow-600 transform hover:-translate-y-1 hover:scale-110"
-            fragment="5" routerLink="/home">Kontakt</a>
+            fragment="5" routerLink="/home">Výpočet prevádzky</a>
+        </li>
+        <li [class.active]="isSectionActive(7)" class="nav-item mr-3 cursor-pointer">
+          <a (click)="toElement(7)"
+            class="nav-link inline-block py-2 px-4 text-white no-underline transition duration-500 ease-in-out hover:bg-yellow-600 transform hover:-translate-y-1 hover:scale-110"
+            fragment="7" routerLink="/home">Kontakt</a>
         </li>
       </ul>
     </div>
