reintegrated highchart modules

--- a/src/app/calculate-model/calculate-model.component.html
+++ b/src/app/calculate-model/calculate-model.component.html
@@ -234,20 +234,18 @@
                 </h2>
             </table>
 
-<!-- TODO@martind -->
-<!--                <highcharts-chart-->
-<!--                [Highcharts] = "highcharts"-->
-<!--                [options] = "firstChartOptions"-->
-<!--                style = "width: 100%; height: 400px; display: block;">-->
-<!--                </highcharts-chart>-->
+                <highcharts-chart
+                  [Highcharts] = "highcharts"
+                  [options] = "firstChartOptions"
+                  style = "width: 100%; height: 400px; display: block;">
+                </highcharts-chart>
                 <label>Počet všetkých správ sa zmenil o {{percentageDifference}}% </label>
 
-<!-- TODO@martind -->
-<!--                <highcharts-chart-->
-<!--                [Highcharts] = "highcharts"-->
-<!--                [options] = "secondChartOptions"-->
-<!--                style = "width: 100%; height: 400px; display: block;">-->
-<!--                </highcharts-chart>-->
+                <highcharts-chart
+                  [Highcharts] = "highcharts"
+                  [options] = "secondChartOptions"
+                  style = "width: 100%; height: 400px; display: block;">
+                </highcharts-chart>
                 <label>Veľkosť všetkých správ sa zmenila o {{percentageDifference1}}% </label>
 
                     <h1 class="text-3xl text-center rounded-full py-3 px-6 my-8"> Optimalizácia služby NOTIFY  </h1>
@@ -331,19 +329,19 @@
                         <tr><td>Celková veľkosť všetkých správ na užívateľa</td> <td>{{ncv3a}}</td></tr>
                     </h2>
                 </table>
-<!-- TODO@martind -->
-<!--                    <highcharts-chart-->
-<!--                    [Highcharts] = "highcharts" -->
-<!--                    [options] = "thirdChartOptions" -->
-<!--                    style = "width: 100%; height: 400px; display: block;">-->
-<!--                    </highcharts-chart>-->
+
+                    <highcharts-chart
+                      [Highcharts] = "highcharts"
+                      [options] = "thirdChartOptions"
+                      style = "width: 100%; height: 400px; display: block;">
+                    </highcharts-chart>
                     <label>Počet všetkých správ sa zmenil o {{percentageDifference2}}% </label>
-<!-- TODO@martind -->
-<!--                    <highcharts-chart-->
-<!--                    [Highcharts] = "highcharts" -->
-<!--                    [options] = "fourthChartOptions" -->
-<!--                    style = "width: 100%; height: 400px; display: block;">-->
-<!--                    </highcharts-chart>-->
+
+                    <highcharts-chart
+                      [Highcharts] = "highcharts"
+                      [options] = "fourthChartOptions"
+                      style = "width: 100%; height: 400px; display: block;">
+                    </highcharts-chart>
                     <label>Veľkosť všetkých správ sa zmenila o {{percentageDifference3}}% </label>
 
                     <h1 class="text-3xl text-center rounded-full py-3 px-6 my-8"> Čiastočná optimalizácia NOTIFY  </h1>
@@ -427,19 +425,19 @@
                         <tr><td>Celková veľkosť všetkých správ na užívateľa</td> <td>{{pcv3a}}</td></tr>
                     </h2>
                 </table>
-<!-- TODO@martind -->
-<!--                    <highcharts-chart-->
-<!--                    [Highcharts] = "highcharts"-->
-<!--                    [options] = "fifthChartOptions"-->
-<!--                    style = "width: 100%; height: 400px; display: block;">-->
-<!--                    </highcharts-chart>-->
+
+                    <highcharts-chart
+                      [Highcharts] = "highcharts"
+                      [options] = "fifthChartOptions"
+                      style = "width: 100%; height: 400px; display: block;">
+                    </highcharts-chart>
                     <label>Počet všetkých správ sa zmenil o {{percentageDifference4}}% </label>
-<!-- TODO@martind -->
-<!--                    <highcharts-chart-->
-<!--                    [Highcharts] = "highcharts"-->
-<!--                    [options] = "sixthChartOptions"-->
-<!--                    style = "width: 100%; height: 400px; display: block;">-->
-<!--                    </highcharts-chart>-->
+
+                    <highcharts-chart
+                      [Highcharts] = "highcharts"
+                      [options] = "sixthChartOptions"
+                      style = "width: 100%; height: 400px; display: block;">
+                    </highcharts-chart>
                     <label>Veľkosť všetkých správ sa zmenila o {{percentageDifference5}}% </label>
 
                     <h1 class="text-3xl text-center rounded-full py-3 px-6 my-8"> Kombinácia predošlých optimalizácií  </h1>
@@ -523,20 +521,19 @@
                         <tr><td>Celková veľkosť všetkých správ na užívateľa</td> <td>{{bcv3a}}</td></tr>
                     </h2>
                 </table>
-<!-- TODO@martind -->
-<!--                    <highcharts-chart-->
-<!--                    [Highcharts] = "highcharts"-->
-<!--                    [options] = "seventhChartOptions"-->
-<!--                    style = "width: 100%; height: 400px; display: block;">-->
-<!--                    </highcharts-chart>-->
+
+                    <highcharts-chart
+                    [Highcharts] = "highcharts"
+                    [options] = "seventhChartOptions"
+                    style = "width: 100%; height: 400px; display: block;">
+                    </highcharts-chart>
                     <label>Počet všetkých správ sa zmenil o {{percentageDifference6}}% </label>
 
-<!-- TODO@martind -->
-<!--                    <highcharts-chart-->
-<!--                    [Highcharts] = "highcharts"-->
-<!--                    [options] = "eightChartOptions"-->
-<!--                    style = "width: 100%; height: 400px; display: block;">-->
-<!--                    </highcharts-chart>-->
+                    <highcharts-chart
+                      [Highcharts] = "highcharts"
+                      [options] = "eightChartOptions"
+                      style = "width: 100%; height: 400px; display: block;">
+                    </highcharts-chart>
                     <label>Veľkosť všetkých správ sa zmenila o {{percentageDifference7}}% </label>
             </div>
         </div>
